--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-mirage": "^0.4.15",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-surge": "^1.4.1",
     "ember-cli-tachyons-shim": "^4.9.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
